<resources>
    <string name="app_name">马龙--商城</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="home">主页</string>
    <string name="hot">热卖</string>
    <string name="catagory">分类</string>
    <string name="cart">购物车</string>
    <string name="mine">我的</string>
    <string name="share">分享</string>
    <string name="to_login">点击登录</string>
    <string name="my_orders">我的订单</string>
    <string name="my_favorite">我的收藏</string>
    <string name="my_addresses">收货地址</string>
    <string name="my_msg">我的信息</string>
    <string name="logout">退出登录</string>
    <string name="token_error">TOKEN出错</string>
    <string name="smssdk_resend_identify_code">已经发送验证码</string>
    <string name="smssdk_resend_identify_code2">重新发送验证码</string>


</resources>
